# Kifuwarabe_Shogi2018

./: #memo.md  .gitignore  Cargo.toml  README.md  VS_きふわらべ2018セット - ショートカット.lnk  diagram.json  graph.json  kifuwarabe_shogi2018 - ビットバケツ.lnk  log_kw2018.txt  task_cmate0.bat
src/: config.rs  display_impl.rs  logger.rs  main.rs  movement_picker.rs  movement_thinks.rs  searcher_impl.rs  shell_impl.rs  shell_usi_impl.rs  time_manager.rs
src/DEAD/: DEAD_uchu.rs
src/DELETED/: rakkansuji.txt
src/actions/: command_list.rs  mod.rs
src/consoles/: asserts.rs  commands.rs  unit_test.rs
src/consoles/visuals/: dumps.rs  title.rs
src/jotai/: uchu.rs
src/kasetu/: atamakin.rs
src/mediators/: med_kikisu.rs  mod.rs
src/meidai/: math_meidai.rs
src/memory/: ky.rs  ky2.rs  mod.rs  number_board.rs  uchu.rs  uchu_impl.rs
src/misc/: mod.rs  movement.rs  option.rs  position_ex.rs
src/models/: mod.rs  movement.rs
src/searchs/: mod.rs  searcher.rs
src/syazo/: sasite_element.rs  sasite_seisei.rs  sasite_sentaku.rs
src/teigi/: constants.rs  conv.rs  shogi_syugo.rs  shogi_syugo_seki.rs
src/teigi/banjometries/: banjo_direction_niko_kankei.rs  banjo_metrics.rs
src/thinks/: randommove.rs  think.rs
src/thinks/cards/: ido_random_card.rs
src/thinks/results/: jisatusyu_result.rs  komatori_result.rs
src/thinks/visions/: vision_tree.rs
src/tusin/: csa.rs  mod.rs  us2.rs  us_conv.rs  usi.rs
src/visions/: vision_tree.rs
その他/フラッドゲートの結果/: 20180218.txt
