[package]
name = "kifuwarabe_shogi2018"
version = "0.1.0"
authors = ["muzudho <muzudho1@gmail.com>"]

[dependencies]
rand="0.3.0"
lazy_static = "1.1.0"

[dependencies.kifuwarabe_shell]
git = "https://github.com/muzudho/rust_kifuwarabe_shell.git"
rev = "617eae960ba8e6b199abc8edf83052c4e220d53e"

[dependencies.kifuwarabe_usi]
git = "https://github.com/muzudho/rust_kifuwarabe_usi.git"
rev = "096ebbb384319a74b831ba5405b723ae4f26071d"

[dependencies.kifuwarabe_position]
git = "https://github.com/muzudho/rust_kifuwarabe_position.git"
rev = "39c301ced1f093585412da49068100e114dc0a30"

[dependencies.kifuwarabe_movement]
git = "https://github.com/muzudho/rust_kifuwarabe_movement.git"
rev = "dd323dac889f299ba721f3cf788056e4f7a8a0f7"

[dependencies.kifuwarabe_alpha_beta_search]
git = "https://github.com/muzudho/rust_kifuwarabe_alpha_beta_search.git"
rev = "d6514f4f1a7ddfb57921136139f028c6cb0d1cac"
