[package]
name = "kifuwarabe_shogi2018"
version = "0.1.0"
authors = ["muzudho <muzudho1@gmail.com>"]

[dependencies]
rand="0.3.0"
lazy_static = "1.1.0"
clippy = { version = "*", optional = true }

[dependencies.kifuwarabe_shell]
git = "https://github.com/muzudho/rust_kifuwarabe_shell.git"
rev = "617eae960ba8e6b199abc8edf83052c4e220d53e"

[dependencies.kifuwarabe_usi]
git = "https://github.com/muzudho/rust_kifuwarabe_usi.git"
rev = "096ebbb384319a74b831ba5405b723ae4f26071d"

[dependencies.kifuwarabe_position]
git = "https://github.com/muzudho/rust_kifuwarabe_position.git"
rev = "0f43771fd890e9881e8d470b84f54177fe29a7ca"

[dependencies.kifuwarabe_movement]
git = "https://github.com/muzudho/rust_kifuwarabe_movement.git"
rev = "a5444fe7b495c86a02b38822b15456a42eeba8ad"

[dependencies.kifuwarabe_alpha_beta_search]
git = "https://github.com/muzudho/rust_kifuwarabe_alpha_beta_search.git"
rev = "3e53e1915de1e6ac9ddee47ee263113137b72da4"

[dependencies.kifuwarabe_movement_picker]
git = "https://github.com/muzudho/rust_kifuwarabe_movement_picker.git"
rev = "0c5e7992b997ea4cffd721e86c05013593b33ed5"
